--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta name="description" content="Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connectionss with users as you engage in genuine discussion.">
     <meta charset="UTF-8" />
@@ -106,28 +106,7 @@
         </div>
       </div>
 
-      <div class="ulLi">
-        <ul>
-          <li>About Us</li>
-          <li>What We Do</li>
-          <li>FAQ</li>
-
-        </ul>
-        <ul>
-
-          <li>Career</li>
-          <li>Blog</li>
-          <li>Contact Us</li>
-        </ul>
-      </div>
-
-      <div>
-        <i></i><i></i><i></i>
-      </div>
-      <p>&copy;Copyright 2018 Huddle. All rights reserved.
-      </p>
-    </footer>
-
+   
 
   
   </body>
